# pyo3-sub-interpreter-broken

./: Cargo.toml  README.md
src/: lib.rs
